<resources>
    <string name="app_name">Güneş Bakkal</string>
    <string name="title_activity_main_page">Ana Sayfa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login_or_register">Kullanıcı İşlemleri</string>

    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="forgot_password">Şifrenizimi Unuttunuz ?</string>
    <string name="already_member">Zaten Üyemisiniz ?</string>
    <string name="not_already_member">Hesabınız Yok Mu ?</string>
    <string name="i_wanna_try">Şifrenizi Hatırlamadınız Mı ?</string>
    <string name="send_forgot_mail">Kurmatma E-Postası Gönder</string>

    <string name="pre_register_email">E-Posta Adresiniz</string>
    <string name="hint_register_email">atakangunes@gmail.com</string>

    <string name="pre_register_name">İsiminiz</string>
    <string name="hint_register_name">Atakan</string>

    <string name="pre_register_surname">Soy İsiminiz</string>
    <string name="hint_register_surname">Güneş</string>

    <string name="pre_register_password">Şifeniz</string>
    <string name="hint_register_password">123456</string>

    <string name="pre_register_password_repeat">Şifrenizin Tekrarı</string>
    <string name="hint_register_password_repeat">123456</string>

    <string name="pre_register_address">Adresiniz</string>
    <string name="hint_register_address">Batı Mah. Pendik İstanbul</string>

    <string name="pre_register_phone">Telefonunuz</string>
    <string name="hint_register_phone">+90 555 555 5555</string>

    <string name="null_email_or_password">E-Posta veya Şifre Boş</string>

    <string name="connection_error">Sunucuya Bağlanılamadı</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="admin_page">Yönetim Sayfası</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="exit">Çıkış Yap</string>
    <string name="my_account">Hesabım</string>
    <string name="categorises">Kategoriler</string>

    <string name="exit_ok">Çıkış Yapıldı</string>

    <string name="visitor">Ziyaretçi</string>
    <string name="category_all_of_them">Tüm Ürünler</string>

    <string name="search">Ara</string>
    <string name="hint_search">Sade Soda, Mentos, Ekmek, Salça</string>
    <string name="load_more_product">Daha Fazla Ürün Yükle</string>
    <string name="pre_product_info_stock">Sepete Eklenecek Adet</string>
    <string name="hint_product_info_stock">1</string>
    <string name="add_to_cart">Sepete Ekle</string>
    <string name="product_brand">Marka</string>
    <string name="pre_product_brand">Marka</string>
    <string name="hint_product_brand">BİM</string>
    <string name="hint_product_name">Krinkil</string>
    <string name="pre_product_name">İsim</string>
    <string name="pre_product_weight">Ağırlık</string>
    <string name="hint_product_weight">500 gr</string>
    <string name="hint_product_stock">500 Adet</string>
    <string name="pre_product_stock">Mevcut Stok</string>
    <string name="pre_product_price">Fiyat</string>
    <string name="hint_product_price">2 ₺</string>
    <string name="pre_product_desc">Açıklama</string>
    <string name="hint_product_desc">Özel oalarak elde üretilmiştir</string>
    <string name="null_cart">Sepetim</string>
    <string name="full_cart">Sepetim (%1$d)</string>
    <string name="update">Güncelle</string>
    <string name="cart_confirm_button">Siparişi Tamamla (%1$.2f. ₺)</string>
    <string name="more_than_stock">Stok Yeterli Değil</string>
    <string name="confirm_disable">Sepet Boş</string>
    <string name="delete">Sil</string>
    <string name="status_shipped">Kargolandı</string>
    <string name="status_completed">Tamamlandı</string>
    <string name="status_confirmed">Onaylandı</string>
    <string name="status_canceled">İptal Edildi</string>
    <string name="status_ordered">Sipariş Edildi</string>
    <string name="title_activity_control_panel">Yönetim Paneli</string>
    <string name="add_category">Kategori Oluştur</string>
    <string name="selected_cat">Seçili Kategori</string>
    <string name="pre_category_name">Kategori Adı</string>
    <string name="hint_category_name">İçecekler</string>
    <string name="pre_category_image">Kategori Resmi ( Seçmek için Tıkla )</string>
    <string name="apply">Kaydet</string>
    <string name="save">Ekle</string>
    <string name="select_image">Resmi Seçiniz</string>
    <string name="product_id">Ürün Numarası</string>
    <string name="product_from_id">Ürünü Getir</string>
    <string name="pre_product_image">Resim ( Yüklemek İçin Resim Bölgesine Tıklayın )</string>
    <string name="pre_product_confirm">Onayla</string>
    <string name="pre_product_delete">Sil</string>
    <string name="add_product">Ürün Ekle</string>
    <string name="edit_product">Ürün Düzenle</string>
    <string name="confirm_delete">Silmek İstediğinize Eminmisiniz ?</string>
    <string name="null_product">Önce Ürünü Çağırmalısınız</string>
    <string name="choose_product">Ürün IDsi Boş Olamaz</string>
    <string name="product_null">Ürün Getirilemedi</string>
    <string name="error_product">Ürün Getirilirken Hatayla karşılaşıldı</string>
    <string name="error_product_add">Ürün Eklenirken Sorun Oluştu</string>
    <string name="pre_product_category">Kategori</string>
    <string name="error_add_product">Ürün Eklenirken Hata Oluştu</string>
    <string name="pre_product_edit_stock">Eklemek  / Silmek İstediğiniz Stok</string>
    <string name="add_stock">Stok Ekle</string>
    <string name="del_stock">Stok Sil</string>
    <string name="error_stock">Stok Güncellenirken Hata Oluştu</string>
    <string name="must_insert">Bir Değer Girilmeli</string>
    <string name="must_choose_product">Öncelikle Ürün Seçilmeli</string>
    <string name="error_edit_add">Ürün Güncellenemedi</string>
    <string name="hint_product_category">İçecekler</string>
    <string name="hint_product_id">10000</string>
    <string name="pre_product_id">Ürün Numarası</string>
    <string name="buy_them">Sepete Ekle</string>
    <string name="view_them">İncele</string>
    <string name="update_user_info">Güncelle</string>
    <string name="update_password">Şifre Değiştir</string>
    <string name="update_user_password">Şifre Değiştir</string>
    <string name="match_password">Şifreler Uyuşmuyor</string>
    <string name="null_password">Şifre ve Tekrarı Girmelisiniz</string>
    <string name="editOrder">Sipariş Görüntüle</string>
    <string name="get_from_statues">Statüden Getir</string>
    <string name="get_order">Siparişleri Getir</string>
    <string name="get_from_order_id">Numaradan Sipariş Getir</string>

    <string-array name="order_status">
        <item>Sipariş Edildi</item>
        <item>Onaylandı</item>
        <item>Kargolandı</item>
        <item>Tamamlandı</item>
        <item>İptal Edildi</item>
    </string-array>

    <string name="user_info_title">Kullanıcı Bilgileri</string>
    <string name="user_info">EPosta : %5$s\nİsim Soyisim : %1$s %2$s\nTelefon : %3$s\nAdres : %4$s</string>
    <string name="set_statue">Durumu Güncelle\n(Güncellemek için Yuvarlaklı Kutucuğa Tıkla)</string>
    <string name="set_statue_button">Güncelle</string>
    <string name="allow_stock">Geçerli Bir Değer Girmelisiniz</string>
    <string name="found_user">Kullanıcı Bulunamadı</string>
    <string name="null_category">Kategoriler Getirilemedi</string>
    <string name="null_order">Sipariş Bulunamadı</string>
    <string name="null_order_id">Geçerli Bir ID Giriniz</string>
    <string name="null_order_statue">İlgili Filtrelemede Sipariş Bulunamadı</string>
    <string name="cart_null">Sepet Boş</string>
    <string name="online">Bu uygulamayı kullanabilmek için internete bağlı olmanız gerekiyor</string>
    <string name="send_new_password">Şifreyi Değiştir</string>
    <string name="null_email">Lütfen Geçerli Bir Mail Girin</string>
    <string name="password_match">Şifreler Uyuşmuyor</string>
    <string name="null_password_repeat">Şifre Tekrarı Boş Olamaz</string>
    <string name="null_pin">PIN Boş Olamaz</string>
    <string name="pre_forgot_pin">PIN\n(Eposta Adresinize Gönderildi)</string>
    <string name="hint_forgot_pin">12312312</string>
    <string name="remember_password">Şifrenizi Hatırladınızmı ?</string>
</resources>
