<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_cart"
        android:icon="@mipmap/icon_cart"
        android:title="@string/null_cart" />

    <group
        android:id="@+id/nav_menu_user"
       >
        <item
            android:id="@+id/nav_admin"
            android:icon="@mipmap/icon_admin"
            android:title="@string/admin_page" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@mipmap/icon_orders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_account"
            android:icon="@mipmap/icon_person"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/logout"
            android:title="@string/exit" />
    </group>

    <group
        android:id="@+id/nav_menu_visitor"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_register"
            android:icon="@mipmap/icon_person"
            android:title="@string/register" />
        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/icon_person"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_forgot_password"
            android:icon="@mipmap/icon_person"
            android:title="@string/forgot_password" />
    </group>
</menu>
