<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ControlPanel"
    tools:showIn="@layout/activity_control_panel">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/svMenu"
        android:layout_height="match_parent"
        android:visibility="visible">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="3">

            <Button
                android:layout_width="120dp"
                android:onClick="loadCategory"
                android:layout_height="160dp"
                android:text="@string/add_category" />

        </GridLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/llAPCategory"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <TextView
            style="@style/input_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_cat" />

        <Spinner
            android:id="@+id/spinCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <TextView
            style="@style/input_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pre_category_name" />

        <EditText
            android:id="@+id/etCategoryName"
            style="@style/input_obj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category_name" />

        <TextView
            style="@style/input_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pre_category_image" />

      <!--  <ImageView
            android:id="@+id/ivCategoryImage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:scaleType="fitCenter" />
-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveCategory"
            android:text="@string/apply" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addCategory"
            android:text="@string/save" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteCategory"
            android:text="@string/delete" />

    </LinearLayout>
</RelativeLayout>